# dealfinder

./: .gitignore  PROCESS_FLOWS.md  PRODUCTION_PLAN.md  README.md  TECHNOLOGY_RATIONALE.md  WARP.md  project-status.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
docs/: APACHE_ZEPPELIN.md  developer_journal.md
infrastructure/: README.md  TERRAFORM_GUIDE.md  bootstrap.sh
infrastructure/environments/dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/monitoring/cloudwatch/: main.tf  outputs.tf  variables.tf
infrastructure/modules/networking/: main.tf  outputs.tf  variables.tf
infrastructure/shared/: outputs.tf  providers.tf  variables.tf
socialmedlia/: sm001.md
src/dealfinder/: __init__.py
tests/: README.md  test_readme.py
tests/infrastructure/: test_aws_resources.py
tests/unit/: test_bootstrap_script.py  test_cicd_pipelines.py  test_infrastructure_tests.py  test_terraform_monitoring.py
